mudanca da logo

--- a/index.html
+++ b/index.html
@@ -19,16 +19,12 @@
     <header class="row header">
       <!-- div centralizada -->
       <div class="col-sm-6 header_div_centralizada">
-        <div class="row">
-          <!-- Div com imagem -->
-          <div class="col-sm-4 header_div_logo">
+     
             <img
-              src="https://www.atoananet.com.br/images/logo.png"
+              src="logo.jpg"
               alt="Logo"
               class="logo_imagem"
             />
-          </div>
-        </div>
       </div>
     </header>
 
